--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,6 @@ opencv-python-headless==4.6.0.66
 fastapi==0.87.0
 face-recognition==1.3.0
 cmake==3.25.0
+python-multipart==0.0.5
+uvicorn==0.20.0
 
